fixes and changes

--- a/src/views/dashboard.default.customers.menu.html
+++ b/src/views/dashboard.default.customers.menu.html
@@ -6,7 +6,7 @@
         <div class="card-panel-options">
           <div class="col-lg-12 invisible-block">Invisible</div>
           <button ng-click="add()" class="btn-status-success"><i class="fa fa-plus"></i> Add</button>
-          <button ng-click="edit()" class="btn-status-default"><i class="fa fa-pencil"></i> Edit</button>
+          <button ng-click="editCustomer()" class="btn-status-default"><i class="fa fa-pencil"></i> Edit</button>
           <button ng-click="delete()" class="btn-status-danger"><i class="fa fa-trash"></i> Delete</button>
         </div>
       </div>
