--- a/src/views/dashboard.default.inventory.track.html
+++ b/src/views/dashboard.default.inventory.track.html
@@ -325,10 +325,10 @@
               <td data-label="Product">&nbsp;{{getProductDisplay()}}</td>
               <td data-label="Quantity">{{block.quantity + " " + block.units}}</td>
               <td data-label="Catch Date">{{block.catchDate | date:"M/d/y"}}</td>
-              <td data-label="Region">{{block.catchRegion}}</td>
-              <td data-label="Catcher">{{block.caughtBy}}</td>
-              <td data-label="Method">{{block.catchType}}</td>
-              <td data-label="Depth">{{block.waterDepth}}</td>
+              <td data-label="Region">&nbsp;{{block.catchRegion}}</td>
+              <td data-label="Catcher">&nbsp;{{block.caughtBy}}</td>
+              <td data-label="Method">&nbsp;{{block.catchType}}</td>
+              <td data-label="Depth">&nbsp;{{block.waterDepth}}</td>
             </tr>
           </tbody>
         </table>
