--- a/src/views/dashboard.default.supply-chain.menu.html
+++ b/src/views/dashboard.default.supply-chain.menu.html
@@ -3,6 +3,7 @@
       <div class="card-panel-header">
         <h2>Supply Chains</h2>
         <div class="card-panel-options">
+          <div class="col-lg-12 invisible-block">Invisible</div>
           <button class="btn-status-success" ng-click="createNewSupplyChain()"><i class="fa fa-plus"></i> Add</button>
           <button class="btn-status-default" ng-click="editSupplyChain(selectedSupplyChain)"><i class="fa fa-pencil"></i> Edit</button>
           <button ng-click="renameSupplyChain(selectedSupplyChain)" class="btn-status-default"><i class="fa fa-font"></i> Rename</button>
@@ -15,8 +16,6 @@
             <tr>
               <th>Select</th>
               <th>Name</th>
-              <th></th>
-              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -25,8 +24,6 @@
                 <input type="radio" ng-model="$parent.selectedSupplyChain" ng-value="$index">
               </td>
               <td data-label="Name">{{supplyChain.name}}</td>
-              <td></td>
-              <td></td>
             </tr>
           </tbody>
         </table>
