--- a/src/views/dashboard.help.customer.html
+++ b/src/views/dashboard.help.customer.html
@@ -1,7 +1,7 @@
 <div class="col-lg-10 main">
   <div class="card-panel">
     <div class="card-panel-header">
-      <h2>Managing Customers and Add Invoices</h2>
+      <h2>Managing Customers</h2>
     </div>
     <div class="panel-body">
       <div class="row">
