--- a/src/views/dashboard.help.overview.html
+++ b/src/views/dashboard.help.overview.html
@@ -9,7 +9,7 @@
     <div class="panel-body">
       <div class="row">
         <div class="col-lg-6">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/picuG_92HoQ?rel=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/IHdBG501fwo?rel=0" frameborder="0" allowfullscreen=""></iframe>
         </div>
         <div class="col-lg-6">
           <h4>Please refer to this video for a brief overview of the Coastline platform.<br><br>
