--- a/src/views/login.html
+++ b/src/views/login.html
@@ -34,15 +34,13 @@
 
                 <div class="form-group">
                   <center>
-                    <label>Don't have an account? <a ui-sref="sign-up">Sign Up</a> today!</label>
+                    <!-- <label>Don't have an account? <a ui-sref="sign-up">Sign Up</a> today!</label> -->
                   </center>
                 </div>
 
-                <!-- Change this to a button or input when using this as a form -->
                 <center>
                   <button type="submit" class="btn-status-success">Login</button>
                 </center>
-                <!-- <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a> -->
               </fieldset>
           </form>
           </div>
