--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -164,8 +164,13 @@ a.btn-size-large:focus {
   padding-bottom: 5px;
   outline: none;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-
 }
+
+.btn-upload {
+  margin-top: -32px;
+  margin-right: 2px;
+}
+
 .btn-table-danger {
   @include border-radius(2px);
   color: $secondary-background-color;
