--- a/src/views/dashboard.default.ecommerce.html
+++ b/src/views/dashboard.default.ecommerce.html
@@ -69,52 +69,33 @@
             <div class="col-lg-8 col-lg-offset-2">
          </fieldset>
          <fieldset class="form-group">
-            <div class="col-lg-12">
+            <div class="col-lg-6">
                <label>Choose supply chain: </label>
                <select ng-model="selectedSupplyChain" ng-options="supplyChain as supplyChain.name for supplyChain in supplyChains" ng-disabled="allDisabled" class="form-control"></select>
             </div>
-         </fieldset>
-         <fieldset ng-show="selectedSupplyChain" class="form-group">
-            <div class="col-lg-12">
+            <div class="col-lg-6" ng-show="selectedSupplyChain">
                <label>Choose stage: </label>
                <select ng-model="selectedStage" ng-options="stage as stage.self.name for stage in stages" ng-disabled="allDisabled" class="form-control"></select>
             </div>
          </fieldset>
+
          <fieldset ng-show="selectedStage" class="form-group">
-            <div class="col-lg-12">
+            <div class="col-lg-6">
                <label>Choose batch: </label>
                <select ng-model="selectedBlock" ng-options="(block.catchDate | date: 'M/d/y') for block in blocks" ng-disabled="allDisabled" class="form-control"></select>
-               <!-- <small class="text-muted">Please select the target destination for your inventory.</small> -->
             </div>
-         </fieldset>
-         <fieldset ng-show="selectedBlock" class="form-group">
-
-            <div class="col-lg-12">
+            <div class="col-lg-6" ng-show="selectedBlock">
                <label>Attach Product Photo</label>
                <input ng-disabled="allDisabled" class="form-control" type="file" ngf-select ng-model="file" name="file">
                <small class="text-muted">PNG and JPG files ONLY!</small>
                <div class="button" ngf-select ng-model="file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}">
                </div>
             </div>
-
          </fieldset>
-
-         <fieldset ng-show="selectedBlock" class="form-group">
-            <div class="col-lg-9">
-               <label>Description: </label>
-               <input class="form-control" ng-model="description" type="text" ng-disabled="allDisabled" placeholder="ex. Filleted, Five-pound bag">
-               <small class="text-muted">[Optional]: Description to show up on e-commerce store.</small>
-            </div>
-            <div class="col-lg-3">
-               <button ng-click="upload()" class="btn-status-success">Upload</button>
-            </div>
-         </fieldset>
-
          <fieldset ng-show="selectedBlock" class="form-group">
             <div class="col-lg-6">
                <label>Unit Price: </label>
                <input class="form-control" ng-model="unitPrice" type="text" ng-disabled="allDisabled" placeholder="ex. Filleted, Five-pound bag">
-               <small class="text-muted">[Optional]: Please enter in the process type.</small>
             </div>
             <div class="col-lg-6">
                <label>Units: </label>
@@ -122,6 +103,14 @@
                <small class="text-muted">[Fixed]: Block units.</small>
             </div>
          </fieldset>
+
+         <fieldset ng-show="selectedBlock" class="form-group">
+            <div class="col-lg-12">
+               <label>Description: </label>
+               <input class="form-control" ng-model="description" type="text" ng-disabled="allDisabled" placeholder="ex. Filleted, Five-pound bag"></input><button ng-click="upload()" class="btn-table-success btn-upload alignright">Upload</button>
+            </div>
+         </fieldset>
+
       </form>
 
       <div class="modal-footer">
