--- a/src/views/dashboard.default.ecommerce.html
+++ b/src/views/dashboard.default.ecommerce.html
@@ -6,7 +6,7 @@
             <div class="card-panel-options">
                <div class="col-lg-12 invisible-block">Invisible</div>
                <button ng-click="add()" class="btn-status-success"><i class="fa fa-plus"></i> Add</button>
-               <button ng-click="remove()" class="btn-status-danger"><i class="fa fa-trash"></i> Remove</button>
+               <button ng-click="remove(selectedBlock._id)" class="btn-status-danger"><i class="fa fa-trash"></i> Remove</button>
             </div>
          </div>
          <div class="table-responsive table-card-responsive">
