--- a/src/views/dashboard.default.supply-chain.create.html
+++ b/src/views/dashboard.default.supply-chain.create.html
@@ -1,5 +1,5 @@
 <div ng-controller="SupplyChainCreateCtrl">
-  <!-- <div class="col-lg-10 main" ng-controller="TrackInventoryMenuCtrl"> -->
+  <div class="col-lg-10 main" >
     <div class="card-panel">
       <div class="card-panel-header">
         <h2>Supply Chains</h2>
@@ -20,5 +20,5 @@
       </form>
       <br>
     </div>
-  <!-- </div> -->
+  </div>
 </div>
