--- a/src/views/dashboard.settings.security.html
+++ b/src/views/dashboard.settings.security.html
@@ -16,7 +16,7 @@
                     <label>Password Change</label>
                   </div>
                   <div class="col-lg-9">
-                    <input class="form-control" ng-model="formData.password" type="text" placeholder="Old password"></input>
+                    <input class="form-control" ng-model="formData.password" type="password" placeholder="Old password"></input>
                     <small class="text-muted">Enter your old password.</small>
                   </div>
                 </div>
