--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -350,9 +350,9 @@
   </div>
   <div class="modal-body">
     <ul class="nav nav-tabs">
-      <li ng-class="{active:item==1}"><a data-toggle="tab" ng-click="item=1" ng-href="">Customer Information &nbsp;
+      <li ng-class="{active:item==1}"><a data-toggle="tab" ng-click="item=1" ng-href="">Customer Info &nbsp;
         <span class="section-required" ng-show="nameRequired || emailRequired || phoneRequired"> * </span></a></li>
-      <li ng-class="{active:item==2}"><a data-toggle="tab" ng-click="item=2" ng-href="">Payment Information &nbsp;
+      <li ng-class="{active:item==2}"><a data-toggle="tab" ng-click="item=2" ng-href="">Payment Info &nbsp;
         <span class="section-required" ng-show="invoiceNumber || paymentRequired || statusRequired || dateRequired || creditRequired"> * </span></a></li>
     </ul>
     <br>
