--- a/src/css/components/_modal.scss
+++ b/src/css/components/_modal.scss
@@ -11,7 +11,7 @@ div.modal-content {
   border: none;
 }
 .modal-header {
-  background-color: #37474F;
+  background-color: $navbar-color;
   border-top-right-radius: 4px;
   border-top-left-radius: 4px;
   outline: none;
