--- a/src/views/dashboard.default.orders.menu.html
+++ b/src/views/dashboard.default.orders.menu.html
@@ -4,7 +4,7 @@
       <div class="card-panel-header">
         <h2>Manage Orders</h2>
         <div class="card-panel-options" >
-          <div class="col-lg-12 invisible-block">Invisible</div>
+          <div class="col-lg-12 invisible-block">&nbsp;</div>
           <button ng-click="addOrder()" class="btn-status-success"><i class="fa fa-plus"></i> Add</button>
           <button ng-click="editOrder()" class="btn-status-default"><i class="fa fa-pencil"></i> Edit</button>
           <button ng-hide="isLoadingPDF" ng-click="viewOrderDetail(selectedOrder)" class="btn-status-default"><i class="fa fa-file-pdf-o"></i> PDF</button>
