--- a/src/views/dashboard.settings.fishery.html
+++ b/src/views/dashboard.settings.fishery.html
@@ -7,7 +7,7 @@
       <div class="panel-body">
         <div class="panel-setting">
           <form>
-            <div class="row">
+            <div class="row" style="margin-top: -20px;">
               <fieldset class="form-group">
                 <div class="col-lg-6">
                   <label>Name</label>
